2007-08-17  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_fonts): don't leak the cursor font

2007-08-12  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (create_folder_icon),
	(create_gtk_theme_pixbuf), (handle_bytes), (message_from_capplet),
	(message_from_child), (read_pixbuf), (generate_theme_thumbnail):
	various small tweaks and optimizations

2007-08-08  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (create_meta_theme_pixbuf):
	Create the icon theme representative before the GTK stock button. Since
	we explicitly set the icon theme for the first, this ensures both are
	drawn with the same icon theme. Before it was possible when changing
	icon themes (especially on slower machines) that the GtkSettings were
	not yet updated and the stock button still used the old theme.

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_theme): make sure we don't run off
	the end of the array

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_theme),
	(gnome_theme_cursor_info_free): copy the name for the default cursor,
	too, lest we crash on free, and only unref the thumbnail if we have
	one

2007-08-04  Denis Washington  <denisw@svn.gnome.org>

	* gnome-theme-info.c: (read_cursor_theme), (look_for_cursor_theme):
	Also load the "default" cursor theme as GnomeThemeCursorInfo so
	we know about the available sizes. (bug #462409)

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: reduce metatheme thumbnail size to 128x128

2007-08-02  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_color_scheme_parse): no need for an
	expensive parse to initialize the colors

2007-08-02  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (generate_metacity_theme_thumbnail),
	(generate_icon_theme_thumbnail): don't generate GTK thumbnails when we
	want metacity or icon (bug #462724)

2007-07-30  Jens Granseuer  <jensgr@gmx.net>
