@@ -1,5 +1,10 @@
 2007-08-17  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-theme-info.c: (read_cursor_fonts): fix double-free, and make
+	the builtins non-static to save relocations
+
+2007-08-17  Jens Granseuer  <jensgr@gmx.net>
+
 	* gnome-theme-info.c: (read_cursor_fonts): don't leak the cursor font
 
 2007-08-12  Jens Granseuer  <jensgr@gmx.net>
